--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@xenova/transformers": "^2.15.0",
+		"@xenova/transformers": "github:xenova/transformers.js#sam-box-inputs",
 		"panzoom": "^9.4.3"
 	}
 }
