--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.3.0",
+		"@melt-ui/svelte": "^0.75.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -33,6 +35,8 @@
 	"dependencies": {
 		"@techstark/opencv-js": "^4.9.0-release.2",
 		"@xenova/transformers": "github:xenova/transformers.js#sam-box-inputs",
-		"panzoom": "^9.4.3"
+		"bits-ui": "^0.19.5",
+		"panzoom": "^9.4.3",
+		"pocketbase": "^0.21.1"
 	}
 }
