--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "freeclimbs",
+	"name": "freeclimbs-five",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,32 +12,27 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@melt-ui/pp": "^0.3.0",
-		"@melt-ui/svelte": "^0.75.3",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.83.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"eslint": "^8.56.0",
+		"@types/eslint": "^9.6.0",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
+		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@techstark/opencv-js": "^4.9.0-release.2",
-		"@xenova/transformers": "github:xenova/transformers.js#sam-box-inputs",
-		"bits-ui": "^0.19.5",
 		"panzoom": "^9.4.3",
-		"pocketbase": "^0.21.1"
+		"pocketbase": "^0.21.4"
 	}
 }
